--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "folvix:-architecting-your-future",
+  "name": "folvix",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^7.6.3",
+    "framer-motion": "^12.23.0",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react": "^19.1.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-	  "@vitejs/plugin-react": "^4.2.0",
-	  "@types/node": "^22.14.0",
-	  "typescript": "~5.7.2",
-	  "vite": "^6.2.0"
-}
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.3.5"
+  }
 }
